--- a/web/package.json
+++ b/web/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "tailwind-merge": "^2.5.3",
+    "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.15"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
