--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,8 @@
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "next": "14.2.15",
+    "next-auth": "^5.0.0-beta.22",
+    "path-to-regexp": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.3",
